Restore navbar link for RSS. Tweak highlighting so comments are easier to read.

--- a/themes/nord/html/base.html
+++ b/themes/nord/html/base.html
@@ -49,6 +49,7 @@
                 <a href="{{nav-page.uri}}">{{nav-page.title}}</a>
                 </li>
                 {% endfor %}
+                <li><a href="{{rss-uri}}">RSS</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
